--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,23 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>132381301913-1eejtkfo1pf4lf9pkq737rf1skng2ekf.apps.googleusercontent.com</string>
+	<string>336619668827-a57a0mq0imdqpfriabn1eo8rflkp5aks.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.132381301913-1eejtkfo1pf4lf9pkq737rf1skng2ekf</string>
+	<string>com.googleusercontent.apps.336619668827-a57a0mq0imdqpfriabn1eo8rflkp5aks</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>132381301913-arlh75vdfauoievt3mgtuau0qje9jdg2.apps.googleusercontent.com</string>
+	<string>336619668827-gfgracg0ubnkkmeb5md3ttadmi9t2vn1.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBe_fPPDQTnEfq7ZFKa2kYAdDKkmFIsQI8</string>
+	<string>AIzaSyAtHRncE9kg2ZbGoAnDEVt4GkKkZBfzoME</string>
 	<key>GCM_SENDER_ID</key>
-	<string>132381301913</string>
+	<string>336619668827</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.souvikbiswas.flutterfireSamples</string>
+	<string>com.souvikbiswas.flutterfireExamples</string>
 	<key>PROJECT_ID</key>
-	<string>flutterfire-samples</string>
+	<string>brisull-lfl-flutterfile</string>
 	<key>STORAGE_BUCKET</key>
-	<string>flutterfire-samples.appspot.com</string>
+	<string>brisull-lfl-flutterfile.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:132381301913:ios:7a50d1273dd06c801eec08</string>
+	<string>1:336619668827:ios:f85f31e5c1a78ed1ebc67e</string>
 </dict>
 </plist>
